mbattle 투표 구현중

--- a/src/css/mbattle/MBattle.module.css
+++ b/src/css/mbattle/MBattle.module.css
@@ -58,8 +58,8 @@
 }
 
 .sectionBoards {
-    /* display: flex;
-    flex-wrap: wrap; */
+    display: flex;
+    flex-wrap: wrap;
     cursor: default;
 }
 
@@ -82,6 +82,12 @@
 
 .boardImages > div > img {
     height: 140px;
+}
+
+.voteItemDiv {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .boardContents {
@@ -112,9 +118,28 @@
     color: #1FAB70;
 }
 
-.pagingLabel {
-    margin: 0 auto;
-    width: 600px;
+.paging {
+    display: flex;
+    justify-content: center;
+    margin-top: 33px;
+    margin-bottom: 33px;
+}
+
+.paging>span {
+    display: inline-block;
+    margin: 5px;
+    font-size: 18px;
+    width: 32px;
+    height: 32px;
+    line-height: 32px;
+    border:0px solid white;
+    text-align: center;
+    cursor: pointer;
+}
+
+.activePage {
+    border: 1px solid #A3A3A3 !important;
+    background: #f8f8f8;
 }
 
 .noMbattle {
