--- a/src/css/Main.module.css
+++ b/src/css/Main.module.css
@@ -29,13 +29,15 @@
 }
 
 .boardTitleB {
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    display: flex;
     background-color:#F3F3F3;
     width:883px; 
-    height:110px;
+    height:140px;
     border: 1px solid #A6A6A6;
     border-radius: 10px;
-    padding-left: 35px;
-    padding-top: 20px;
     cursor: pointer;
 }
 
