--- a/src/css/Main.module.css
+++ b/src/css/Main.module.css
@@ -28,7 +28,7 @@
     font-size: 20px;
 }
 
-.boardTitleB {
+/* .boardTitleB {
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
@@ -39,7 +39,36 @@
     border: 1px solid #A6A6A6;
     border-radius: 10px;
     cursor: pointer;
+} */
+
+.boardTitleB {
+    background-color:#F3F3F3;
+    width:883px; 
+    height:110px;
+    border: 1px solid #A6A6A6;
+    border-radius: 10px;
+    padding-left: 35px;
+    /* margin-bottom: 40px; */
+    padding-top: 20px;
 }
+.boardTitleB>.boardTitleTestArea>p:first-child {
+    font-size: 25px;
+    margin-bottom: 0px;
+} 
+.boardTitleB>.boardTitleTestArea>p+p {
+    font-size: 15px;
+    font-weight: 600;
+} 
+.boardTitleImg {
+    position: relative;
+    bottom: 25px;
+}
+.boardTitleB {
+    display: flex;
+    justify-content: space-between;
+}
+
+
 
 .section a,
 .section a:link, 
