--- a/src/css/common/Header.module.css
+++ b/src/css/common/Header.module.css
@@ -163,8 +163,8 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    
-    max-width: 120px;
+    min-width: 140px;
+    max-width: 150px;
 }
 .alertContent+div {
     padding: 2px 0;
