--- a/src/css/admin/AdminReport.module.css
+++ b/src/css/admin/AdminReport.module.css
@@ -1,12 +1,29 @@
 .sectionSearch {
     width: 900px;
     text-align: left;
-    margin: 0 auto;
+    margin-bottom: 40px;
 }
 
-.sortDiv {
+.filterBtns {
     display: flex;
-    padding: 20px
+    padding: 10px;
+}
+
+.filterBtn {
+    display: inline-block;
+    width: auto;
+    height: auto;
+    padding-left: 8px;
+    padding-right: 8px;
+    padding-bottom: 3px;
+    margin-right: 15px;
+    cursor: pointer;
+    color:  #C5C5C5;
+}
+
+.filterActive {
+    color: black;
+    /* border-bottom: black solid 4px; */
 }
 
 .boardTable {
@@ -38,11 +55,6 @@
     width: 250px;
 }
 
-.pagingLabel {
-    margin: 0 auto;
-    width: 600px;
-}
-
 .detailTable {
     width: 900px;
     margin: 0 auto;
@@ -62,11 +74,34 @@
     width: 150px;
 }
 
+.img {
+    max-width: 700px;
+}
+
 .buttonDiv {
     display: flex;
     justify-content: space-between;
 }
 
-.buttonDiv > div > Button {
-    margin: 10px;
+.paging {
+    display: flex;
+    justify-content: center;
+    margin-top: 33px;
+    margin-bottom: 33px;
+}
+
+.paging>span {
+    display: inline-block;
+    margin: 5px;
+    font-size: 18px;
+    width: 32px;
+    height: 32px;
+    /* line-height: 32px; */
+    border:0px solid white;
+    text-align: center;
+    cursor: pointer;
+}
+
+.activePage {
+    border: 1px solid #A3A3A3 !important;
 }
