--- a/src/css/user/Mypage.module.css
+++ b/src/css/user/Mypage.module.css
@@ -131,6 +131,7 @@
 
 .myMbtwhyContainer,
 .myMbtmiContainer,
+.myMbattleContainer,
 .myQnaContainer ,
 .bookmarkContainer,
 .myNoteContainer,
@@ -146,6 +147,7 @@
 }
 .myMbtwhyTitle,
 .myMbtmiTitle,
+.myMbattleTitle,
 .myQnaTitle ,
 .bookmarkTitle,
 .myNoteTitle,
