mbtmi 목록 값 유지, 헤더를 통한 진입과 글상세에서의 진입 구분

--- a/src/css/admin/AdminNotice.module.css
+++ b/src/css/admin/AdminNotice.module.css
@@ -57,6 +57,12 @@
 .checkbox {
     zoom: 1.5;
 }
+.checkbox + span {
+    margin-left: 5px;
+    position: relative;
+    bottom: 3px;
+}
+
 :root {
     accent-color: black;
 }
