--- a/src/css/admin/AdminNotice.module.css
+++ b/src/css/admin/AdminNotice.module.css
@@ -169,10 +169,15 @@
     /* background: seashell; */
     border: 0.5px solid gray;
 }
-.formBtns {
+.formBtns>span {
     float: right;
 }
-.formBtns>input {
+.previousListBtn {
+    background: white !important;
+    border: 1px solid #B8B8B8 !important;
+    color: black !important;
+}
+.formBtns input {
     font-size: 17px;
     padding: 4px 28px 4px 28px;
     border-radius: 4px;
@@ -180,7 +185,7 @@
     border: 1px solid black;
     color: white;
 }
-.formBtns>input:first-child {
+.formBtns input:first-child {
     margin-right: 12px;
     background: white;
     border: 1px solid #B8B8B8;
