위로 가기 버튼 추가. mbattle, mbtwhy 게시글 상세보기 url 파라미터 변경

--- a/src/css/mbattle/MBattle.module.css
+++ b/src/css/mbattle/MBattle.module.css
@@ -61,7 +61,7 @@
     display: flex;
     flex-wrap: wrap;
     cursor: default;
-    justify-content: left;
+    justify-content: center;
 }
 
 .sectionBoard {
@@ -153,4 +153,24 @@
     width: 600px;
     text-align: center;
     margin: 0 auto;
+}
+
+.sectionRightArea {
+    display: flex;
+    flex-direction: column-reverse;
+}
+
+.sectionRightArea>div {
+    /* border: dashed red 3px; */
+    /* padding-right: 100px; */
+    /* position: sticky; */
+    position:fixed;
+    right: 100px;
+    bottom: 40px;
+}
+
+.movetopIcon {
+    float: right;
+    width: 50px;
+    cursor: pointer;
 }
