--- a/src/css/mbattle/MBattleForm.module.css
+++ b/src/css/mbattle/MBattleForm.module.css
@@ -51,3 +51,23 @@
     justify-content: center;
     cursor: pointer;
 }
+
+.sectionRightArea {
+    display: flex;
+    flex-direction: column-reverse;
+}
+
+.sectionRightArea>div {
+    /* border: dashed red 3px; */
+    /* padding-right: 100px; */
+    /* position: sticky; */
+    position:fixed;
+    right: 100px;
+    bottom: 40px;
+}
+
+.movetopIcon {
+    float: right;
+    width: 50px;
+    cursor: pointer;
+}
