--- a/src/css/mbtmi/MBTmi.module.css
+++ b/src/css/mbtmi/MBTmi.module.css
@@ -442,6 +442,12 @@
     color: #8F8F8F;
     cursor: pointer;
 }
+
+/* quill로 삽입된 이미지를 출력할때 최대 크기 지정 */
+.postContent img {
+    max-width: 700px;
+}
+
 .thumbIconDetail{
     width: 30px;
 }
@@ -626,6 +632,12 @@
 
 
 /* MBTmi 작성폼 */
+/* .customQuill img,
+.ql-editor img  {
+    max-width: 700px;
+    height: auto;
+} */
+
 .mbtmiForm {
     /* border: 1px solid green; */
     width: 100%;
