관리자페이지 정지 및 해제. alert => swal로 변경하여 비로그인/정지/관리자 상태의 사용자에 대하여 게시글/댓글의 삭제/수정 기능을 제외한 모든 기능을 차단.

--- a/src/css/mbattle/MBattle.module.css
+++ b/src/css/mbattle/MBattle.module.css
@@ -61,7 +61,7 @@
     display: flex;
     flex-wrap: wrap;
     cursor: default;
-    justify-content: center;
+    justify-content: left;
 }
 
 .sectionBoard {
@@ -147,6 +147,7 @@
 .noMbattle {
     margin: 100px;
     color:#C5C5C5;
+    justify-content: center;
 }
 
 .sectionSearch {
