mbattle, mbtwhy 쪽지 보내기. alert=>swal 변경. 신고 페이지에서mbtwhy, mbattle 내용 개행 적용. mbtmi 에디터 양식으로 표시되도록 적용

--- a/src/css/admin/AdminReport.module.css
+++ b/src/css/admin/AdminReport.module.css
@@ -47,6 +47,18 @@
     padding: 10px;
 }
 
+.sectionTr {
+    cursor: pointer;
+}
+
+.mbtmiTr {
+
+}
+
+.mbtmiTr img {
+    max-width: 700px;
+}
+
 .boardContent {
     display: -webkit-box;
     -webkit-line-clamp: 1;
