mbattle 결과 통계 차트 수정 (가로 막대 그래프에 대해, 전체 투표값을 지정해줌)

--- a/src/css/mbtwhy/MbtwhyDetail.module.css
+++ b/src/css/mbtwhy/MbtwhyDetail.module.css
@@ -181,9 +181,9 @@
     font-size: 18px;
     width: 32px;
     height: 32px;
-    /* line-height: 32px; */
-    border:0px solid white;
+    border: 0px solid white;
     text-align: center;
+    line-height: 32px;
     cursor: pointer;
 }
 
