--- a/src/css/common/Header.module.css
+++ b/src/css/common/Header.module.css
@@ -133,7 +133,9 @@
 .popoverBellOrMessageItem {
     /* background-color: lemonchiffon; */
     text-align: left;
-    max-width: 220px;
+
+    /* max-width: 220px; */
+    max-width: 500px;
 }
 .messageTitle {
     /* background: ghostwhite; */
@@ -153,6 +155,8 @@
     display: flex;
     justify-content: flex-start;
     cursor: pointer;
+
+    max-width: 500px;
 }
 .alertContent {
     /* background: lavenderblush; */
@@ -164,7 +168,9 @@
     overflow: hidden;
     text-overflow: ellipsis;
     min-width: 140px;
-    max-width: 150px;
+
+    /* max-width: 150px; */
+    max-width: 500px;
 }
 .alertContent+div {
     padding: 2px 0;
