로고위치 조절 등

--- a/src/css/common/Header.module.css
+++ b/src/css/common/Header.module.css
@@ -33,6 +33,9 @@
     margin-left: 15px;
     margin-right: 40px;
     width: 30px;
+    
+    position:relative;
+    bottom: 4px;
 }
 
 .navItems {
