--- a/src/css/mbattle/MBattle.module.css
+++ b/src/css/mbattle/MBattle.module.css
@@ -90,7 +90,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    white-space: pre;
+    /* white-space: pre; */
 }
 
 .boardContents {
