--- a/src/css/mbtmi/MBTmi.module.css
+++ b/src/css/mbtmi/MBTmi.module.css
@@ -366,6 +366,7 @@
 }
 .activePage {
     border: 1px solid #A3A3A3 !important;
+    background: #f8f8f8;
 }
 
 /* 글상세 */
@@ -688,6 +689,10 @@
 .sectionRightArea {
     display: flex;
     flex-direction: column-reverse;
+
+    /* 푸터에 배경이미지 추가 후 플로팅버튼을 가리지 않도록 추가 */
+    position: relative;
+    z-index: 10;
 }
 .sectionRightArea>div {
     /* border: dashed red 3px; */
