배너이미지 링크연결

--- a/src/css/Main.module.css
+++ b/src/css/Main.module.css
@@ -109,10 +109,13 @@
     /* border: 3px dashed orange; */
     box-sizing: border-box;
     height: 300px;
-    width: 100%;
+    /* width: 100%; */
     min-width: 1400px;
     margin-bottom: 25px;
     overflow: hidden;
+}
+.bannerArea img {
+    height: 300px;
 }
 
 
