--- a/src/css/mbattle/MBattle.module.css
+++ b/src/css/mbattle/MBattle.module.css
@@ -10,34 +10,54 @@
     width: 800px;
 }
 
-.pageHeader {
-    display: block;
-    width: 800px;
-    border-bottom: solid #4D6879 3px;
-}
-
-.pageHeader > h1 {
-    text-align: left;
-    margin-bottom: 15px;
-    cursor: default;
-}
-
-.pageHeader > div {
+.headerDiv {
     display: flex;
+    margin: 10px 0px 10px 10px;
+    justify-content: right;
+}
+
+.headerDiv > button {
+    font-size: 16px;
+    font-weight: 600;
+    padding: 6px 15px 6px 15px;
+    margin-right: 10px;
+    border: none;
+    background: none;
+    border-radius: 4px;
+    border: 1px solid #E6E6E6;
+}
+
+.writebtnIcon {
+    width: 16px;
+    margin-right: 5px;
+    margin-top: -3px;
+}
+
+.boardTitleB {
+    display: inline-flex;
     justify-content: space-between;
+    background-color:#F3F3F3;
+    width:770px;
+    height:110px;
+    border: 1px solid #A6A6A6;
+    border-radius: 10px;
+    padding-left: 35px;
+    /* margin-bottom: 40px; */
+    padding-top: 20px;
 }
-
-.pageHeaderContent {
-    line-height: 42px;
+.boardTitleB>.boardTitleTextArea>p:first-child {
+    font-size: 25px;
+    margin-bottom: 0px;
     text-align: left;
-    color: #C5C5C5;
-    cursor: default;
-}
-
-.pageHeaderWriteBtn {
-    margin: auto 10px;
-    font-weight: bold;
-    cursor: pointer;
+} 
+.boardTitleB>.boardTitleTextArea>p+p {
+    font-size: 15px;
+    font-weight: 600;
+    color: #868484;
+} 
+.boardTitleImg {
+    position: relative;
+    bottom: 25px;
 }
 
 .popoverButton {
@@ -47,7 +67,7 @@
 }
 
 .sortImg {
-    height: 30px;
+    width: 15px;
     margin-right: 10px;
 }
 
@@ -68,6 +88,7 @@
     width: 370px;
     margin: 15px;
     border: solid #C5C5C5 2px;
+    border-radius: 5px;
     font-weight: bold;
 }
 
@@ -103,6 +124,10 @@
 }
 
 .boardTitle {
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
     margin: 5px;
     text-align: left;
     font-size: small;
@@ -117,7 +142,7 @@
 
 .boardVotedCount {
     font-size: small;
-    font-weight: bold;
+    font-weight: 500;
     color: #1FAB70;
 }
 
@@ -142,7 +167,7 @@
 
 .activePage {
     border: 1px solid #A3A3A3 !important;
-    background: #f8f8f8;
+    background: #d3eafb;
 }
 
 .noMbattle {
@@ -151,15 +176,34 @@
     justify-content: center;
 }
 
-.sectionSearch {
-    width: 600px;
-    text-align: center;
-    margin: 0 auto;
+.searchBar {
+    display: inline-block;
+    position: relative;
+}
+.searchBar>input {
+    border: 1px solid #767676;
+    border-radius: 25px;
+    height: 40px;
+    padding: 3px 42px 3px 13px;
+    width: 220px;
+    font-size: 18px;
+}
+.searchBtnIcon {
+    position: absolute;
+    top: 8px;
+    right: 14px;
+    width: 23px;
+    z-index: 1;
+    cursor: pointer;
 }
 
 .sectionRightArea {
     display: flex;
     flex-direction: column-reverse;
+
+    /* 푸터에 배경 이미지 추가 후 플로팅 버튼을 가리지 않도록 추가 */
+    position: relative;
+    z-index: 10;
 }
 
 .sectionRightArea>div {
