--- a/src/css/mbattle/MBattleDetail.module.css
+++ b/src/css/mbattle/MBattleDetail.module.css
@@ -8,9 +8,31 @@
     margin: 0 auto;
 }
 
-.pageHeader {
-    display: flex;
-    border-bottom: solid #C5C5C5 3px;
+.boardTitleB {
+    display: inline-flex;
+    justify-content: space-between;
+    background-color:#F3F3F3;
+    width:800px;
+    height:110px;
+    border: 1px solid #A6A6A6;
+    border-radius: 10px;
+    padding-left: 35px;
+    /* margin-bottom: 40px; */
+    padding-top: 20px;
+}
+.boardTitleB>.boardTitleTextArea>p:first-child {
+    font-size: 25px;
+    margin-bottom: 0px;
+    text-align: left;
+} 
+.boardTitleB>.boardTitleTextArea>p+p {
+    font-size: 15px;
+    font-weight: 600;
+    color: #868484;
+} 
+.boardTitleImg {
+    position: relative;
+    bottom: 25px;
 }
 
 .sendNoteIcon {
@@ -23,20 +45,12 @@
     bottom: 2px;
 }
 
-.pageHeader > h1 {
-    width: 70%;
-    text-align: left;
-}
-
-.dropDownImg {
-    width: 30px;
-    margin-right: 10px;
-}
-
 .sectionBoard {
+    margin-top: 50px;
     padding: 25px;
-    border-bottom: solid #C5C5C5 2px;
-    font-weight: bold;
+    border: solid #C5C5C5 1px;
+    border-radius: 10px;
+    font-weight: 500;
 }
 
 .popoverButton {
@@ -229,7 +243,7 @@
 }
 
 .sectionComment > div {
-    font-weight: bold;
+    font-weight: 500;
 }
 
 .commentCountDiv {
@@ -238,7 +252,7 @@
 }
 
 .commentCountDiv > div {
-    font-weight: bold;
+    font-weight: 500;
 }
 
 .sectionDeletedComment {
@@ -247,7 +261,7 @@
     border-bottom: solid #C5C5C5 2px;
     color: #C5C5C5;
     font-size: larger;
-    font-weight: bold;
+    font-weight: 500;
     text-align: center;
     align-items: center;
     line-height: 120px;
@@ -274,6 +288,11 @@
 
 .activePage {
     border: 1px solid #A3A3A3 !important;
+    background: #d3eafb;
+}
+
+.commentDiv {
+    margin-top: 33px;
 }
 
 .postCommentDiv {
@@ -284,6 +303,10 @@
 .sectionRightArea {
     display: flex;
     flex-direction: column-reverse;
+
+    /* 푸터에 배경 이미지 추가 후 플로팅 버튼을 가리지 않도록 추가 */
+    position: relative;
+    z-index: 10;
 }
 
 .sectionRightArea>div {
