--- a/src/css/mbtwhy/MbtwhyDetail.module.css
+++ b/src/css/mbtwhy/MbtwhyDetail.module.css
@@ -47,9 +47,11 @@
 }
 
 .sectionBoard {
+    margin-top: 50px;
     padding: 25px;
-    border-bottom: solid #C5C5C5 2px;
-    font-weight: bold;
+    border: solid #C5C5C5 1px;
+    border-radius: 10px;
+    font-weight: 500;
 }
 
 .writerDiv {
@@ -94,6 +96,7 @@
     overflow: hidden;
     width: 700px;
     text-align: left;
+    margin-top: 30px;
     margin-bottom: 30px;
     white-space: pre;
 }
@@ -114,21 +117,24 @@
 
 .bookmarkDiv {
     display: flex;
-    width: 20%;
+    width: 40%;
     justify-content: start;
+}
+
+.bookmarkDiv > img {
     cursor: pointer;
 }
 
 .thumbDiv {
     display: flex;
-    width: 80%;
+    width: 20%;
     justify-content: center;
     cursor: pointer;
 }
 
 .listDiv {
     display: flex;
-    width: 20%;
+    width: 40%;
     justify-content: end;
 }
 
@@ -136,10 +142,11 @@
     padding: 25px;
     border-bottom: solid #C5C5C5 1px;
     white-space: pre;
+    font-weight: 500;
 }
 
-.sectionComment > div{
-    font-weight: bold;
+.sectionComment > button {
+    font-weight: 500;
 }
 
 .commentCountDiv {
@@ -148,7 +155,7 @@
 }
 
 .commentCountDiv > div {
-    font-weight: bold;
+    font-weight: 500;
     cursor: default;
 }
 
@@ -158,7 +165,7 @@
     border-bottom: solid #C5C5C5 2px;
     color: #C5C5C5;
     font-size: larger;
-    font-weight: bold;
+    font-weight: 500;
     text-align: center;
     align-items: center;
     line-height: 120px;
@@ -189,6 +196,11 @@
 
 .activePage {
     border: 1px solid #A3A3A3 !important;
+    background: #FFFFD3;
+}
+
+.commentDiv {
+    margin-top: 33px;
 }
 
 .postCommentDiv {
@@ -211,7 +223,7 @@
 }
 
 .sectionReply > div {
-    font-weight: bold;
+    font-weight: 500;
 }
 
 .replyArrowImg {
@@ -222,6 +234,10 @@
 .sectionRightArea {
     display: flex;
     flex-direction: column-reverse;
+
+    /* 푸터에 배경 이미지 추가 후 플로팅 버튼을 가리지 않도록 추가 */
+    position: relative;
+    z-index: 10;
 }
 
 .sectionRightArea>div {
