--- a/src/css/user/Mypage.module.css
+++ b/src/css/user/Mypage.module.css
@@ -69,7 +69,7 @@
   line-height: 60px;
   font-size: 30px;
 }
-.myMenu:hover{
+.myMenu:hover {
   cursor: pointer;
   margin-left: -10px;
 }
@@ -132,11 +132,10 @@
 .myMbtwhyContainer,
 .myMbtmiContainer,
 .myMbattleContainer,
-.myQnaContainer ,
+.myQnaContainer,
 .bookmarkContainer,
 .myNoteContainer,
-.myAlarmContainer
-{
+.myAlarmContainer {
   font-family: "GangwonEdu_OTFBoldA";
   display: flex;
   /* justify-content: center; */
@@ -148,11 +147,10 @@
 .myMbtwhyTitle,
 .myMbtmiTitle,
 .myMbattleTitle,
-.myQnaTitle ,
+.myQnaTitle,
 .bookmarkTitle,
 .myNoteTitle,
-.myAlarmTitle
-{
+.myAlarmTitle {
   display: flex;
   /* justify-content: center; */
   font-size: 40px;
@@ -162,7 +160,7 @@
   width: 800px;
   margin-top: 20px;
 }
-.tableDiv{
+.tableDiv {
   min-width: 770px;
   min-height: 550px; /* 데이터 10개일떄 */
 }
@@ -179,7 +177,7 @@
   justify-content: center;
   margin-top: 33px;
 }
-.paging>span {
+.paging > span {
   display: inline-block;
   margin: 5px;
   font-size: 18px;
@@ -190,10 +188,10 @@
   line-height: 32px;
   cursor: pointer;
 }
-.activePage {
-  border: 1px solid #A3A3A3 !important;
+/* tr */
+.alarmTr:hover {
+  cursor: pointer;
 }
-
 /* qnaModal */
 .qnaModal {
   height: 700px;
