--- a/src/css/Main.module.css
+++ b/src/css/Main.module.css
@@ -23,7 +23,7 @@
 
 .section {
     /* border: 1px solid red; */
-    min-height: 600px; /* 컨텐츠가 매우 짧더라도 푸터가 바로 붙지 않도록 최소높이 지정 */
+    min-height: 750px; /* 컨텐츠가 매우 짧더라도 푸터가 바로 붙지 않도록 최소높이 지정 */
     width: 883px;
     font-size: 20px;
 }
@@ -116,6 +116,8 @@
 }
 .bannerArea img {
     height: 300px;
+
+    cursor: pointer;
 }
 
 
@@ -124,11 +126,13 @@
     padding: 6px 30px;
     width: 883px;
     font-size: 16px;
-    /* background: honeydew; */
 }
 .table {
     width: 100%;
     margin-bottom: 15px;
+}
+.table>tbody>tr {
+    cursor: pointer;
 }
 .table>tbody>tr:not(:first-child) {
     border-top: 1px solid #9B9B9B;
